--- a/SuperchargedFollowers.csproj
+++ b/SuperchargedFollowers.csproj
@@ -34,4 +34,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="ProxyItems\Prestige\" />
+    </ItemGroup>
+
 </Project>
